// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/forms/UserForm edits user: readonly username edit 1`] = `
<input
  aria-required="true"
  className="ant-input ant-input-disabled css-dev-only-do-not-override-k7429z"
  disabled={true}
  id="username"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={Object {}}
  type="text"
  value="opensrp"
/>
`;

exports[`components/forms/UserForm renders correctly: email input 1`] = `
<input
  className="ant-input css-dev-only-do-not-override-k7429z"
  disabled={false}
  id="email"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={Object {}}
  type="text"
  value=""
/>
`;

exports[`components/forms/UserForm renders correctly: email label 1`] = `
<label
  className=""
  htmlFor="email"
  title="Email"
>
  Email
</label>
`;

exports[`components/forms/UserForm renders correctly: enabled input 1`] = `
Array [
  <input
    checked={true}
    className="ant-radio-input"
    disabled={false}
    name="enabled"
    onChange={[Function]}
    type="radio"
    value={true}
  />,
  <input
    checked={false}
    className="ant-radio-input"
    disabled={false}
    name="enabled"
    onChange={[Function]}
    type="radio"
    value={false}
  />,
]
`;

exports[`components/forms/UserForm renders correctly: firstName input 1`] = `
<input
  aria-required="true"
  className="ant-input css-dev-only-do-not-override-k7429z"
  disabled={false}
  id="firstName"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={Object {}}
  type="text"
  value=""
/>
`;

exports[`components/forms/UserForm renders correctly: firstName label 1`] = `
<label
  className="ant-form-item-required"
  htmlFor="firstName"
  title="First Name"
>
  First Name
</label>
`;

exports[`components/forms/UserForm renders correctly: lastName input 1`] = `
<input
  aria-required="true"
  className="ant-input css-dev-only-do-not-override-k7429z"
  disabled={false}
  id="lastName"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={Object {}}
  type="text"
  value=""
/>
`;

exports[`components/forms/UserForm renders correctly: lastName label 1`] = `
<label
  className="ant-form-item-required"
  htmlFor="lastName"
  title="Last Name"
>
  Last Name
</label>
`;

exports[`components/forms/UserForm renders correctly: practitionerToggle input 1`] = `null`;

exports[`components/forms/UserForm renders correctly: practitionerToggle label 1`] = `null`;

exports[`components/forms/UserForm renders correctly: userGroups input 1`] = `null`;

exports[`components/forms/UserForm renders correctly: userGroups label 1`] = `
<label
  className=""
  htmlFor="userGroups"
  title="Keycloak User Group"
>
  Keycloak User Group
</label>
`;

exports[`components/forms/UserForm renders correctly: username input 1`] = `
<input
  aria-required="true"
  className="ant-input css-dev-only-do-not-override-k7429z"
  disabled={false}
  id="username"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={Object {}}
  type="text"
  value=""
/>
`;

exports[`components/forms/UserForm renders correctly: username label 1`] = `
<label
  className="ant-form-item-required"
  htmlFor="username"
  title="Username"
>
  Username
</label>
`;

exports[`components/forms/UserForm show practitioner toggle when editing user and practitioner is null: practitionerToggle 1`] = `
Object {
  "children": <Memo
    name="active"
  >
    <Radio
      disabled={false}
      name="active"
      value={true}
    >
      Yes
    </Radio>
    <Radio
      disabled={false}
      name="active"
      value={false}
    >
      No
    </Radio>
  </Memo>,
  "id": "practitionerToggle",
  "label": "Mark as Practitioner",
  "name": "active",
}
`;

exports[`components/forms/UserForm show practitioner toggle when editing user and practitioner is provided: practitionerToggle 1`] = `
Object {
  "children": <Memo
    name="active"
  >
    <Radio
      disabled={false}
      name="active"
      value={true}
    >
      Yes
    </Radio>
    <Radio
      disabled={false}
      name="active"
      value={false}
    >
      No
    </Radio>
  </Memo>,
  "id": "practitionerToggle",
  "label": "Mark as Practitioner",
  "name": "active",
}
`;

exports[`components/forms/UserForm user is not edited if api is down: readonly username edit 1`] = `
<input
  aria-required="true"
  className="ant-input ant-input-disabled css-dev-only-do-not-override-k7429z"
  disabled={true}
  id="username"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={Object {}}
  type="text"
  value="opensrp"
/>
`;
